Remove finalize() and other deprecated Java usages (supersedes #1698) (#1786)
* Remove finalize() and other deprecated Java usages (#1698)

Adopts the Java-version-independent cleanups from Louis Bergelson's #1698,
leaving htsjdk on Java 17 (the PR's bump to 21 and its spotbugs changes are
intentionally omitted; master already carries the newer spotbugs config).

The core motivation is dropping Object.finalize(), which is deprecated for
removal: finalization is unreliable for releasing resources and blocks moving
to newer JDKs. In its place DiskBackedQueue now implements AutoCloseable with a
close() that delegates to clear(), so callers can use try-with-resources
instead of relying on the GC to reclaim spilled temp files. SamRecordTrackingBuffer
(and its inner BufferBlock) likewise implement AutoCloseable.

Also removes the deprecated System.runFinalization() call in
FileAppendStreamLRUCache, replaces the deprecated Class.newInstance() with
getDeclaredConstructor().newInstance(), and tidies up diamond operators, a
static helper, and redundant String constructors in the tests.

Co-authored-by: Louis Bergelson <louisb@broadinstitute.org>